--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title> Activity 3 </title>
 <body>
 <body style="background-color:#ffdab9;">
-<center> <h1> <font face="Impact"color="#ffa07a"size=16> THIS IS MY SECOND QUARTER ACTIVITY NO. 3 </font> </center>
+<center> <h1> <font face="Blured Stroke"color="#ffa07a"size=16> THIS IS MY SECOND QUARTER ACTIVITY NO </font> <font color="#ffa07a"size=16>.2 </font> </center>
 <h2> <font color="#ffa07a"face="impact"> <p style="text-align:right">
  <span style="float:left">Name: Terence Caletina</span>
 Date: 20/11/2023 </font> </h2> </p>
